Use nabla symbol for gradient

--- a/semester_2/analysis_2.tex
+++ b/semester_2/analysis_2.tex
@@ -951,9 +951,9 @@ From this formula we obtain 2 results that we will not prove yet because we don'
 
 \begin{itemize}
     \item The result does not depend on the speed of the curve, only on the trajectory.
-    \item If $\munderbar{F} = \triangledown g$ (with $g: \R^2 \to \R$) is the gradient of a potential $g$, then $\int_\gamma \munderbar{F} \cdot \dd{\munderbar{s}} = \int_\gamma \triangledown g \cdot \dd{\munderbar{s}} = g(\gamma(b)) - g(\gamma(a))$.
+    \item If $\munderbar{F} = \nabla g$ (with $g: \R^2 \to \R$) is the gradient of a potential $g$, then $\int_\gamma \munderbar{F} \cdot \dd{\munderbar{s}} = \int_\gamma \nabla g \cdot \dd{\munderbar{s}} = g(\gamma(b)) - g(\gamma(a))$.
 
-          If $g = g(x, y)$ then we have that $\triangledown g = \begin{pmatrix}
+          If $g = g(x, y)$ then we have that $\nabla g = \begin{pmatrix}
                   \pdv{g(x, y)}{x} \\ \pdv{g(x,y)}{y}
               \end{pmatrix}$.
 
